# noter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  config.json  conftest.py  main.py  mypy.ini  noter.py  noter.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-tests.yml  tests.yml
noter/: __init__.py  __main__.py  config.json
tests/: __init__.py  conftest.py  test_cli.py  test_config_manager.py  test_integration.py  test_note_manager.py  test_noter.py  test_template_manager.py
