[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/fixtures/
'''

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

